--- a/index.html
+++ b/index.html
@@ -11,36 +11,41 @@
 
 <body>
 
-  <section class="main">
-    <section class="cards sedan">
 
-      <img src="./images/icon-sedans.svg" alt="Sedan Icon">
-      <h2 class="cardTitle">Sedans</h2>
-      <p class="text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-        or on your next road trip.</p>
-        <a href="" class="btn text sedanBtn">Learn More</a>
+  <section class="cards sedan">
+    <figure class="figure">
+      <img src="./images/icon-sedans.svg" alt="" class="icon">
+    </figure>
 
-    </section>
+    <h2 class="cardTitle">Sedans</h2>
+    <p class="text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+      or on your next road trip.</p>
+    <a href="" class="btn text sedanBtn">Learn More</a>
 
-    <section class="cards suv">
+  </section>
 
-      <img src="./images/icon-suvs.svg" alt="SUV Icon">
-      <h2 class="cardTitle">SUVs</h2>
-      <p class="text">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family
-        vacation
-        and off-road adventures.</p>
-      <a href="" class="btn text suvBtn">Learn More</a>
+  <section class="cards suv">
 
-    </section>
-    <section class="cards luxury">
+    <figure class="figure">
+      <img src="./images/icon-suvs.svg" alt="" class="icon">
+    </figure>
 
-      <img src="./images/icon-luxury.svg" alt="Luxury Icon">
-      <h2 class="cardTitle">Luxury</h2>
-      <p class="text"> Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-        rental and arrive in style.</p>
-        <a href="" class="btn text luxBtn">Learn More</a>
+    <h2 class="cardTitle">SUVs</h2>
+    <p class="text">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family
+      vacation
+      and off-road adventures.</p>
+    <a href="" class="btn text suvBtn">Learn More</a>
 
-    </section>
+  </section>
+  <section class="cards luxury">
+    <figure class="figure">
+      <img src="./images/icon-luxury.svg" alt="" class="icon">
+    </figure>
+
+    <h2 class="cardTitle">Luxury</h2>
+    <p class="text"> Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+      rental and arrive in style.</p>
+    <a href="" class="btn text luxBtn">Learn More</a>
 
   </section>
 
