--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 <body>
 
-
-  <section class="cards sedan">
+  <section class="cards sedan" role="contentinfo">
     <figure class="figure">
       <img src="./images/icon-sedans.svg" alt="" class="icon">
     </figure>
@@ -24,7 +23,7 @@
 
   </section>
 
-  <section class="cards suv">
+  <section class="cards suv" role="contentinfo">
 
     <figure class="figure">
       <img src="./images/icon-suvs.svg" alt="" class="icon">
@@ -37,7 +36,7 @@
     <a href="" class="btn text suvBtn">Learn More</a>
 
   </section>
-  <section class="cards luxury">
+  <section class="cards luxury" role="contentinfo">
     <figure class="figure">
       <img src="./images/icon-luxury.svg" alt="" class="icon">
     </figure>
